# caffeine

./: .gitignore  BUILD_CHECKLIST.md  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  caffeine-build  caffeine-build.bat  imgui.ini  rebuild.sh
.github/workflows/: release.yml  test.yml
.planning/: CAFFEINE_STATUS_REPORT.md
apps/combined/: main.cpp
apps/doppio/: Doppio.hpp  main.cpp
assets/scripts/: ExampleScript.hpp  ScriptBindings.cpp
cmake/: patch_sol2_optional.py
desing_planning/: README.md  ROADMAP.md  RULES.md  SPECS.md  architecture_specs.md  dev_manifesto.md  memory_model.md  roadmap.md
docs/: AUDIT_REPORT.md  ECOSYSTEM_WORKFLOW.md  ECS.md  HISTORY.md  MASTER.md  README.md  ROADMAP.md  SPECS.md  architecture_specs.md  caffeine-internals.tex  memory_model.md
docs/analysis/: EDITOR_STATUS_ANALYSIS.md
docs/animation/: animation-2d.md  skeletal-animation.md
docs/api/: README.md
docs/architecture/: core.md  memory.md
docs/assets/: asset-manager.md  asset-pipeline.md  caf-format.md  mesh-loading.md
docs/audio/: audio-system.md
docs/caffeine-internals/: main.aux  main.lof  main.lot  main.tex  main.toc  test.tex
docs/concurrency/: job-system.md
docs/containers/: vector.md
docs/core/: events.md  game-loop.md  timer.md  types.md
docs/debug/: debug-tools.md  testing.md
docs/ecs/: core.md  examples.md  scene.md
docs/editor/: scene-editor.md  test-automation.md
docs/fase2/: README.md  debug.md  game-loop.md  input.md  job-system.md  testing.md  timer.md
docs/fase3/: README.md  asset-manager.md  batch-renderer.md  caf-format.md  camera.md  rhi.md
docs/fase4/: README.md  animation.md  audio.md  ecs.md  events.md  physics.md  scene.md  ui.md
docs/fase5/: 3d-math.md  README.md  camera3d.md  mesh-loading.md  skeletal-animation.md  spatial-partitioning.md
docs/fase6/: README.md  asset-pipeline.md  embedded-ui.md  scene-editor.md  scripting.md
docs/input/: input-system.md
docs/math/: quaternions.md  vectors.md
docs/memory/: allocators.md  containers.md
docs/physics/: physics-2d.md  spatial-partitioning.md
docs/plans/: 2025-05-15-script-editor.md  2026-04-07-test-system-design.md  2026-04-11-job-system-design.md  2026-05-07-ecs-core-implementation.md  2026-05-10-camera3d.md  2026-05-11-scripting-design.md  2026-05-11-scripting-plan.md  2026-05-14-transform-gizmos-design.md  2026-05-14-transform-gizmos-implementation.md  2026-05-15-asset-pipeline-design.md  2026-05-15-asset-pipeline-plan.md  2026-05-15-hot-reload-design.md  2026-05-15-project-manager-design.md  2026-05-16-audio-preview-spatial-design.md  2026-05-16-audio-preview-spatial-plan.md  2026-05-16-buildsystem-design.md  2026-05-16-buildsystem-implementation.md  2026-05-16-e2e-testing-design.md  2026-05-16-e2e-testing-plan.md  2026-05-16-material-shader-editor-design.md  2026-05-16-material-shader-editor-plan.md  2026-05-16-project-startup-dialog-tabs-design.md  2026-05-16-project-startup-dialog-tabs.md  2026-05-16-projectstartup-dialog-plan.md  2026-05-17-ecosystem-three-phase-design.md  2026-05-17-ecosystem-three-phase-implementation.md  2026-05-17-scene-viewport-and-entity-types.md  2026-05-17-unified-ecosystem-build.md  2026-05-18-inspector-v2.md  2026-05-18-play-mode-physics-scripting-tileset.md  2026-05-20-viewport-3d-iso-gizmos-xyz.md  2026-05-23-3d-mesh-enhancements.md  2026-05-23-gizmo-raycasting-performance.md  2026-05-23-gizmo-raycasting-vp-inverse.md  2026-05-23-mesh-prefab-asset-pipeline.md  2026-05-23-mesh-prefab-wiring.md  2026-05-23-object-selection-raycasting.md  2026-05-24-doppio-ui-test-framework.md
docs/rendering/: batch-renderer.md  camera-2d.md  camera-3d.md  rhi.md
docs/reviews/: PHASE1_REVIEW.md
docs/scripting/: scripting.md
docs/scripting-reference/: main.tex
docs/ui/: editor-ui.md  game-ui.md
planning/: caffeine-studio-ide.md
planning/m1-scene-editor-foundation/: 1.1-editor-context-undo-redo.md  1.2-hierarchy-panel.md  1.3-inspector-panel.md  1.4-scene-viewport.md  1.5-asset-browser-v1.md  1.6-scene-editor-orchestrator.md  1.7-save-load-scene.md
planning/m2-visual-editing-assets/: 2.1-transform-gizmos.md  2.2-drag-and-drop.md  2.3-asset-pipeline-integration.md  2.4-hot-reload-assets.md  2.5-project-manager.md  2.6-asset-browser-v2.md  2.7-multiple-scene-tabs.md
planning/m3-scripting-runtime/: 3.1-lua-vm.md  3.2-script-component-system.md  3.3-ecs-lua-bindings.md  3.4-sandboxing.md  3.5-script-watcher.md  3.6-editor-script-integration.md  3.7-particle-system.md
planning/m4-advanced-tools-polish/: 4.1-animation-timeline.md  4.2-tilemap-editor.md  4.3-material-shader-editor.md  4.4-audio-preview-spatial.md  4.5-build-system.md  4.6-prefab-system.md  4.7-entity-debugger.md  4.8-plugin-system.md
scripts/: README.md  __init__.py  bin-manager.bat  bin-manager.sh  build.bat  build.fish  build.sh  build_manager.py  version_manager.py
src/: Caffeine.hpp
src/animation/: AnimationComponents.hpp  AnimationSystem.hpp  SkeletalAnimation.hpp
src/assets/: AssetHandle.hpp  AssetManager.cpp  AssetManager.hpp  AssetPipeline.cpp  AssetPipeline.hpp  AssetTypes.hpp  HotReloader.cpp  (+13 more)
tests/: CMakeLists.txt  benchmarks.cpp  doppio_ui_client.py  editor_test_automation.py  gen_test_scene.py  run_ui_tests.sh  test.cpp  test_allocators.cpp  test_animation.cpp  test_assetmanager.cpp  test_audio.cpp  test_batchrenderer.cpp  test_build_manager.py  test_caf.cpp  test_camera2d.cpp  test_camera3d.cpp  test_cap_loader.cpp  test_containers.cpp  test_core.cpp  test_debug.cpp  test_editor.cpp  test_editor_ui_main.cpp  test_eventbus.cpp  test_gameloop.cpp  test_input.cpp  test_jobsystem.cpp  test_math.cpp  test_mesh.cpp  test_octree.cpp  test_phase2_3.cpp  test_physics2d.cpp  test_pipeline.cpp  test_rhi.cpp  test_scenemanager.cpp  test_script.cpp  test_script_seq.cpp  test_skeletal_animation.cpp  test_textureatlas.cpp  test_timer.cpp  test_ui.cpp  (+3 more)
tests/editor/: phase1_integration_test.cpp
tests/fixtures/: test_scene_multiobject.caf
tests/test_editor_ui/: test_assetbrowser.cpp  test_hierarchy.cpp  test_inspector.cpp
(+221 files in other folders)
